Closed Bug 791945 Opened 13 years ago Closed 13 years ago

[b2g-bluetooth] Assertion failed when checking type of propertychanged message

Categories

(Core :: DOM: Device Interfaces, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18
blocking-basecamp +

People

(Reporter: gyeh, Assigned: gyeh)

Details

(Whiteboard: [LOE:S])

Attachments

(1 file, 2 obsolete files)

Log: I/Gecko ( 6103): [Child 6103] ###!!! ASSERTION: PropertyChanged: Invalid value type: 'arr[0].value().type() == BluetoothValue::TArrayOfBluetoothNamedValue'
Attachment #662064 - Flags: review?(echou) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: