Bug 791945 - Final version: Assertion failed when checking type of propertychanged message, r=echou